whitespace and fixed dead pixel

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -68,6 +68,10 @@ body {
 	}
 }
 
+.no-wrap {
+	white-space: nowrap;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-family: $title-font;
 	color: $text-dark-color;
